fix: remove focus outline when explorer is blurred

--- a/static/css/parts/Focus.css
+++ b/static/css/parts/Focus.css
@@ -9,6 +9,10 @@
   outline-width: 1px;
 } */
 
+* {
+  outline: none;
+}
+
 .InputBox:focus {
   border-color: var(--FocusOutline);
 }
